src/objects/Entitlement_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Percent__c</fullName>
        <label>Amount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount_W__c</fullName>
        <label>Amount ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_as_Net_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply as Net Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_Percent__c</fullName>
        <label>Commission Impact (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_Sliding_Scale_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Impact-Sliding Scale Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_W__c</fullName>
        <label>Commission Impact ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Impact__c</fullName>
        <label>Commission Impact ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Entitlement Offers</relationshipLabel>
        <relationshipName>Entitlement_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Entitlement Offers</relationshipLabel>
        <relationshipName>Entitlement_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DE_Outbound_Referral_Offer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Picklist value willl determine the destination for outbound lead generation among DE sister companies.</description>
        <inlineHelpText>Picklist value willl determine the destination for outbound lead generation among DE sister companies.</inlineHelpText>
        <label>DE Outbound Referral Offer</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Entitlement Offers</relationshipLabel>
        <relationshipName>Entitlement_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Option__c</fullName>
        <label>Financing Option</label>
        <picklist>
            <picklistValues>
                <fullName>No Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFC First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susquehanna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Smart E Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Rate__c</fullName>
        <label>Guaranteed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inverter_Extended_Warranty_Years__c</fullName>
        <label>Inverter Extended Warranty (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Entitlement Offers</relationshipLabel>
        <relationshipName>Entitlement_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <label>Leasing Option</label>
        <picklist>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limited_Production_Ext_Warranty_Years__c</fullName>
        <label>Limited Production Ext Warranty (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Roof_Extended_Guarantee_Years__c</fullName>
        <label>New Roof Extended Guarantee (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opt-Out Allowed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_Labor_Extended_Warranty_Years__c</fullName>
        <label>Parts &amp; Labor Extended Warranty (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procurement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Guarantee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Entitlement Offers</relationshipLabel>
        <relationshipName>Entitlement_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Moving_Extended_Guarantee_Years__c</fullName>
        <label>System Moving Extended Guarantee (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Entitlement Offer</label>
    <nameField>
        <label>Entitlement Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>